--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,8 @@
   .error {
     @apply p-2 rounded-md border border-red-600 bg-red-100 text-red-700;
   }
+
+  .active {
+    @apply bg-indigo-800 text-white;
+  }
 }
