--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
     @apply p-2 rounded-md border border-red-600 bg-red-100 text-red-700;
   }
 
+  .success {
+    @apply p-2 rounded-md border border-green-600 bg-green-100 text-green-700;
+  }
+
   .active {
     @apply bg-indigo-800 text-white;
   }
